--- a/src/index.css
+++ b/src/index.css
@@ -16,12 +16,12 @@ body{
   background-color: #333;
   color: white;
   padding: 10px 20px;
+
 }
 
 
 .signin {
-  padding-bottom: 5px;
-  padding-right: 10px;
+  padding: 10px;
   margin: 10px;
   text-align: center;
   border: 1px solid black;
@@ -29,15 +29,24 @@ body{
   background-color: lightgray;
   text-decoration: none;
   color: black;
+  font-weight: bold;
 }
 
 .signup{
-padding-left: 10px;
-padding-bottom: 5px;
+padding:10px;
 width:55px;
 background-color: lightgray;
 text-decoration: none;
 color: black;
+font-weight: bold;
+}
+
+.cars{
+padding: 10px;
+background-color: lightgray;
+text-decoration: none;
+color: black;
+font-weight: bold;
 }
 
 
